# windows-drivers-rs

./: .gitattributes  .gitignore  .typos.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  RELEASE.md  clippy.toml  libcommon.rlib  metadata.json  packages.config  release-plz.toml  rust-driver-makefile.toml  rustfmt.toml  taplo.toml
crates/cargo-wdk/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
crates/cargo-wdk/src/: cli.rs  errors.rs  log.rs  main.rs  test_utils.rs  tests.rs  trace.rs  utils.rs
crates/cargo-wdk/src/actions/: build.rs  mod.rs  new.rs
crates/cargo-wdk/src/actions/clean/: error.rs  (+1 more)
crates/cargo-wdk/src/cli/: args.rs  error.rs  mod.rs
crates/cargo-wdk/src/providers/: env.rs  error.rs  exec.rs  fs.rs  metadata.rs  mod.rs  wdk_build.rs
crates/cargo-wdk/templates/: build.rs.tmp  config.toml.tmp
crates/cargo-wdk/templates/KMDF/: Cargo.toml.tmp  driver_name.inx.tmp  lib.rs.tmp
crates/cargo-wdk/templates/UMDF/: driver_name.inx.tmp
crates/cargo-wdk/templates/WDM/: Cargo.toml.tmp  driver_name.inx.tmp
crates/cargo-wdk/templates/kmdf/: Cargo.toml.tmp  driver_name.inx.tmp  lib.rs.tmp
crates/cargo-wdk/templates/umdf/: Cargo.toml.tmp  driver_name.inx.tmp  lib.rs.tmp
crates/cargo-wdk/templates/wdm/: Cargo.toml.tmp  driver_name.inx.tmp  lib.rs.tmp
crates/cargo-wdk/tests/: _test_utils.rs  build_command_test.rs  common.rs  new_command_test.rs  package_command_test.rs  template_versions_test.rs
crates/cargo-wdk/tests/kmdf-driver/: Cargo.toml  kmdf_driver.inx
crates/cargo-wdk/tests/kmdf-driver-with-target-override/: Cargo.toml  kmdf_driver_with_target_override.inx
crates/cargo-wdk/tests/mixed-package-kmdf-workspace/: Cargo.toml
crates/cargo-wdk/tests/test_utils/: mod.rs
crates/cargo-wdk/tests/umdf-driver/: Cargo.toml  build.rs  umdf_driver.inx
crates/cargo-wdk/tests/wdm-driver/: Cargo.toml  build.rs  wdm_driver copy.inx  wdm_driver.inx
crates/sample-kmdf-driver/: Cargo.toml  Makefile.toml  README.md  build.rs
crates/sample-kmdf-driver/src/: lib.rs
crates/wdk/: CHANGELOG.md  Cargo.toml  build.rs
crates/wdk-alloc/: CHANGELOG.md  Cargo.toml  build.rs
crates/wdk-alloc/src/: lib.rs
crates/wdk-build/: CHANGELOG.md  Cargo.toml  build.rs  rust-driver-makefile.toml  rust-driver-sample-makefile.toml
crates/wdk-build/src/: bindgen.rs  cargo_make.rs  derives.rs  lib.rs  metadata.rs  resource_compile.rs  utils.rs
crates/wdk-build/src/metadata/: driver_install.rs  driver_settings.rs  error.rs  map.rs  mod.rs  ser.rs
crates/wdk-build/tests/: derives.rs
crates/wdk-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/wdk-macros/src/: lib.rs
crates/wdk-macros/tests/: integration_tests.rs  macrotest.rs  trybuild.rs
crates/wdk-macros/tests/macrotest/: wdf_device_create.expanded.rs  wdf_device_create.rs  wdf_device_create_device_interface.expanded.rs  wdf_device_create_device_interface.rs  wdf_driver_create.expanded.rs  wdf_driver_create.rs  wdf_spin_lock_acquire.expanded.rs  wdf_spin_lock_acquire.rs  wdf_verifier_dbg_break_point.expanded.rs  wdf_verifier_dbg_break_point.rs
crates/wdk-macros/tests/trybuild/: wdf_api_that_does_not_exist.rs  wdf_api_that_does_not_exist.stderr  wdf_device_create_unused_return_type.stderr  wdf_driver_create_missing_arg.rs  wdf_driver_create_missing_arg.stderr  wdf_driver_create_wrong_arg_order.rs  wdf_driver_create_wrong_arg_order.stderr  wdf_timer_create_missing_unsafe.stderr
crates/wdk-macros/tests/unit-tests-input/: generated-types-robust.rs  generated-types.rs  missing-wdf-func-enum-contents.rs  missing-wdf-func-enum.rs
crates/wdk-panic/: CHANGELOG.md  Cargo.toml  build.rs
crates/wdk-panic/src/: lib.rs
crates/wdk-python/: Cargo.toml  driver.py
crates/wdk-python/src/: lib.rs
crates/wdk-sys/: CHANGELOG.md  Cargo.toml  build.rs
crates/wdk-sys/generated_bindings/: README.md  constants.rs  ntddk.rs  wdf.rs
crates/wdk-sys/src/: constants.rs  filesystem.rs  filters.rs  gpio.rs  hid-input.h  hid.rs  input.h  lib.rs  macros.rs  network.rs  ntddk-input.h  ntddk.rs  parallel_ports.rs  spb.rs  storage.rs  test_stubs.rs  types.rs  usb.rs  wdf-input.h  wdf.c  wdf.rs  windows.rs
crates/wdk-sys/tests/: call_unsafe_wdf_function_binding_tests.rs
crates/wdk/src/: dbg.rs  fmt.rs  lib.rs  print.rs
crates/wdk/src/sync/: mod.rs  push_lock.rs  rw_lock.rs  rw_spin_lock.rs
crates/wdk/src/wdf/: mod.rs  spinlock.rs  timer.rs
examples/sample-kmdf-driver/: Cargo.toml  README.md  build.rs  sample_kmdf_driver.inx
examples/sample-kmdf-driver/src/: lib.rs
examples/sample-null-driver/: Cargo.toml  README.md  sample_null_driver.inx
examples/sample-null-driver-workspace/: Cargo.toml  README.md
examples/sample-null-driver-workspace/crates/driver/: Cargo.toml  Makefile.toml  sample_null_driver.inx
examples/sample-null-driver-workspace/crates/sample-app/: Cargo.toml
examples/sample-umdf-driver/: Cargo.toml  Makefile.toml  README.md  sample_umdf_driver.inx
examples/sample-umdf-driver/src/: lib.rs
examples/sample-wdm-driver/: Cargo.toml  README.md  build.rs
examples/sample-wdm-driver/src/: lib.rs
sample-umdf-driver/: Cargo.toml  Makefile.toml  README.md  sample_umdf_driver.inx
sample-umdf-driver/src/: lib.rs
sample-wdm-driver/: Cargo.toml  Makefile.toml  sample_wdm_driver.inx
sample-wdm-driver/src/: lib.rs
tests/config-kmdf/: Cargo.toml
tests/config-kmdf/tests/: call_unsafe_wdf_function_binding_tests.rs
tests/config-umdf/: Cargo.toml
tests/config-umdf/tests/: call_unsafe_wdf_function_binding_tests.rs
tests/customized-config-toml-workspace/lib-crate/: Cargo.toml  build.rs
tests/customized-config-toml-workspace/lib-crate/src/: lib.rs
tests/kmdf-config/: Cargo.toml
tests/mixed-package-kmdf-workspace/: Cargo.toml
tests/mixed-package-kmdf-workspace/crates/driver/: Cargo.toml  driver.inx
tests/umdf-driver-workspace/: Cargo.toml
tests/wdk-macros-tests/: Cargo.toml  README.md
tests/wdk-macros-tests/src/: lib.rs
tests/wdk-sys-tests/: Cargo.toml
tests/wdk-sys-tests/src/: lib.rs
tests/wdk-sys-tests/tests/: nt_status_functions.rs
tests/wdm-config/: Cargo.toml
(+223 files in other folders)
