[package]
edition = "2021"
name = "sample-umdf-driver"
version = "0.1.0"
description = "A sample UMDF driver that demonstrates UMDF in RUST"
repository = "https://github.com/microsoft/windows-drivers-rs"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["windows", "driver", "sample", "example", "wdf"]
categories = ["hardware-support"]
publish = false

[package.metadata.wdk.driver-model]
driver-type = "UMDF"
umdf-version-major = 2
target-umdf-version-minor = 31

[lib]
crate-type = ["cdylib"]
# Tests from root driver crates must be excluded since there's no way to prevent linker args from being passed to their unit tests: https://github.com/rust-lang/cargo/issues/12663
test = false

[dependencies]
wdk = { path = "../crates/wdk", version = "0.2.0" }
wdk-alloc = { path = "../crates/wdk-alloc", version = "0.2.0" }
wdk-macros= { path = "../crates/wdk-macros", version = "0.2.0" }
wdk-panic = { path = "../crates/wdk-panic", version = "0.2.0" }
wdk-sys = { path = "../crates/wdk-sys", version = "0.2.0" }
static_assertions = "1.1.0"
thiserror = "1.0.56"

[build-dependencies]
wdk-build = { path = "../crates/wdk-build", version = "0.2.0" }

[features]
default = []
nightly = ["wdk-macros/nightly"]

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
