[package]
name = "cargo-wdk"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
cargo_metadata.workspace = true
wdk-build.workspace = true
serde_json.workspace = true
include_dir.workspace = true
log.workspace = true
log4rs.workspace = true
clap-verbosity-flag.workspace = true
mockall.workspace = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(wdk_build_unstable)", "cfg(skip_umdf_static_crt_check)"]

# Cannot inherit workspace lints since overriding them is not supported yet: https://github.com/rust-lang/cargo/issues/13157
# [lints]
# workspace = true
# 
# Differences from the workspace lints have comments explaining why they are different

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[lints.clippy]
# Lint Groups
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Individual Lints
# multiple_unsafe_ops_per_block = "forbid"
multiple_unsafe_ops_per_block = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros
# undocumented_unsafe_blocks = "forbid"
undocumented_unsafe_blocks = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros
# unnecessary_safety_doc = "forbid"
unnecessary_safety_doc = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros
unwrap_used = "deny"

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true