[package]
authors = ["Microsoft"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
description = "A Cargo extension for developing Windows drivers in Rust"
edition.workspace = true
exclude = ["tests"]
keywords = ["cargo", "wdk", "windows"]
license.workspace = true
name = "cargo-wdk"
repository.workspace = true
version = "0.1.1"

[dependencies]
anyhow.workspace = true
cargo_metadata.workspace = true
clap = { features = ["derive"], workspace = true }
clap-cargo.workspace = true
clap-verbosity-flag.workspace = true
include_dir.workspace = true
mockall.workspace = true
mockall_double.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { features = ["env-filter"], workspace = true }
wdk-build.workspace = true
windows = { features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
], workspace = true }

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
regex.workspace = true
sha2.workspace = true

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[lints.clippy]
# Lint Groups
all = "deny"
cargo = "warn"
nursery = "warn"
pedantic = "warn"
# Individual Lints
# multiple_unsafe_ops_per_block = "forbid"
multiple_unsafe_ops_per_block = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros
# undocumented_unsafe_blocks = "forbid"
undocumented_unsafe_blocks = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros
# unnecessary_safety_doc = "forbid"
unnecessary_safety_doc = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"
