[package]
edition.workspace = true
name = "sample-kmdf-driver"
version = "0.1.0"
description = "A sample KMDF driver to demonstate KMDF drivers in RUST"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["windows", "driver", "sample", "example", "wdf"]
categories = ["hardware-support"]
publish = false

[package.metadata.wdk]

[lib]
crate-type = ["cdylib"]
# Tests from root driver crates must be excluded since there's no way to prevent linker args from being passed to their unit tests: https://github.com/rust-lang/cargo/issues/12663
test = false

[dependencies]
wdk.workspace = true
wdk-alloc.workspace = true
wdk-macros.workspace = true
wdk-panic.workspace = true
wdk-sys.workspace = true
static_assertions = "1.1.0"
thiserror = "1.0.55"

[build-dependencies]
wdk-build.workspace = true

[features]
default = []
nightly = ["wdk-macros/nightly"]
