[package]
edition.workspace = true
name = "wdk-alloc"
version = "0.3.1"
description = "alloc support for binaries compiled with the Windows Development Kit (WDK)"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["allocator", "wdk", "windows"]
categories = ["memory-management", "no-std", "hardware-support"]

[dependencies]
wdk-sys.workspace = true

[build-dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wdk-build.workspace = true

[dev-dependencies]
wdk-sys = { workspace = true, features = ["test-stubs"] }

[lints]
workspace = true
