[package]
categories = ["hardware-support", "memory-management", "no-std"]
description = "alloc support for binaries compiled with the Windows Development Kit (WDK)"
edition.workspace = true
keywords = ["allocator", "wdk", "windows"]
license.workspace = true
name = "wdk-alloc"
readme.workspace = true
repository.workspace = true
version = "0.4.1"

[dependencies]
wdk-sys.workspace = true

[build-dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
wdk-build.workspace = true

[dev-dependencies]
wdk-sys = { workspace = true, features = ["test-stubs"] }

[lints]
workspace = true
