[package]
edition.workspace = true
name = "wdk-build"
version = "0.2.0"
description = "A library to configure a Cargo build script for binding generation and downstream linking of the WDK (Windows Driver Kit)"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["wdk", "windows", "build-dependencies"]
categories = ["development-tools::build-utils", "development-tools::ffi"]

[dependencies]
bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
clap-cargo = "0.14.0"
thiserror = "1.0.59"
windows = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_System_Registry",
] }
cargo_metadata = "0.18.1"

[build-dependencies]
rustversion = "1.0.14"

[dev-dependencies]
windows = { version = "0.52.0", features = ["Win32_UI_Shell"] }

# Cannot inherit workspace lints since overriding them is not supported yet: https://github.com/rust-lang/cargo/issues/13157
# [lints]
# workspace = true
# 
# Differences from the workspace lints have comments explaining why they are different

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[lints.clippy]
# Lint Groups
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Individual Lints
# multiple_unsafe_ops_per_block = "forbid"
multiple_unsafe_ops_per_block = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros
# undocumented_unsafe_blocks = "forbid"
undocumented_unsafe_blocks = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros
# unnecessary_safety_doc = "forbid"
unnecessary_safety_doc = "deny" # This is lowered to deny since clap generates allow(clippy::restriction) in its Parser and Args derive macros

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"
