# Avoid using workspace package metadata due to: https://github.com/eupn/macrotest/issues/95 or https://github.com/eupn/macrotest/issues/94
[package]
edition = "2021"
name = "wdk-macros"
version = "0.2.0"
description = "A collection of macros that help make it easier to interact with wdk-sys's direct bindings"
repository.workspace = true
readme.workspace = true
license.workspace = true
keywords = ["wdk", "windows", "wdf", "wdm", "ffi"]
categories = [
  "external-ffi-bindings",
  "development-tools::ffi",
  "os::windows-apis",
  "os",
]

[lib]
proc-macro = true

[dependencies]
cargo_metadata = "0.18.1"
itertools = "0.12.1"
proc-macro2 = "1.0.82"
quote = "1.0.35"
scratch = "1.0"
syn = { version = "2.0.58", features = ["full"] }

[dev-dependencies]
wdk-sys.workspace = true
fs4 = { version = "0.8.2", features = ["sync"] }
pathdiff = "0.2.0"
lazy_static = "1.4.0"
macrotest = "1.0.12"
owo-colors = "4.0.0"
paste = "1.0.15"
pretty_assertions = "1.4.0"
rustversion = "1.0.15"
syn = { version = "2.0.58", features = ["extra-traits"] }
trybuild = "1.0.91"

[package.metadata.cargo-udeps.ignore]
development = [
  # macrotest and trybuild use dev-dependencies in when compiling their respective tests
  "wdk-sys",
]

[features]
default = []
nightly = []

# Cannot inherit workspace lints since overriding them is not supported yet: https://github.com/rust-lang/cargo/issues/13157
# [lints]
# workspace = true
# 
# Differences from the workspace lints have comments explaining why they are different

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "forbid"

[lints.clippy]
# Lint Groups
all = "deny"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
# Individual Lints
multiple_unsafe_ops_per_block = "forbid"
undocumented_unsafe_blocks = "forbid"
# unnecessary_safety_doc = "forbid"
unnecessary_safety_doc = "deny" # This is lowered to deny to allow overriding it for proc_macros: https://github.com/rust-lang/rust-clippy/issues/12583

[lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
redundant_explicit_links = "warn"
unescaped_backticks = "warn"
