[package]
categories = ["hardware-support", "no-std"]
description = "Default panic handler implementations for programs built with WDK"
edition.workspace = true
keywords = ["panic", "panic-handler", "panic-impl", "wdk", "windows"]
license.workspace = true
name = "wdk-panic"
readme.workspace = true
repository.workspace = true
version = "0.4.1"

[lints]
workspace = true
